# mu2edaq-phone-notification-system

./: .gitignore  CLAUDE.md  CMakeLists.txt  GETTING-STARTED.md  PhonePushNotificationSpecifications.md  README.md  bootstrap.sh  pyproject.toml  requirements.txt  start-mu2edaq-notify-server.sh  stop-mu2edaq-notify-server.sh
config/: notify-server.yaml
docs/: application-chain.md  reverse-proxy-operations.md  reverse-proxy-setup.md
ios/: README.md
ios/Mu2eNotify/: project.yml
ios/Mu2eNotify/Mu2eNotify.xcodeproj/: project.pbxproj
ios/Mu2eNotify/Mu2eNotify.xcodeproj/xcshareddata/xcschemes/: Mu2eNotify.xcscheme
ios/Mu2eNotify/Sources/: AppState.swift  DashboardView.swift  EventDetailView.swift  Info.plist  Models.swift  Mu2eNotify.entitlements  Mu2eNotifyApp.swift  QRScannerView.swift  ServerClient.swift  SettingsView.swift  SetupView.swift  SplashView.swift
ios/Mu2eNotify/Sources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Mu2eNotify/Tests/: Mu2eNotifyTests.swift
man/: mu2edaq-notify-server.1  mu2edaq-notify.1  mu2edaq_notify.3  mu2edaq_notify_cpp.3
scripts/: aws-proxy-user-data.sh  start-mu2edaq-notify-chain.sh  start-mu2edaq-notify-proxy.sh  status-mu2edaq-notify-proxy.sh  stop-mu2edaq-notify-chain.sh  stop-mu2edaq-notify-proxy.sh
src/cpp/: notify.cpp
src/cpp/examples/: publish_example.cpp
src/cpp/tests/: test_notify.cpp
src/include/mu2edaq_notify/: notify.hpp
src/mu2edaq_notify/: __init__.py  cli.py  events.py  publisher.py
src/mu2edaq_notify/server/: __init__.py  app.py  auth.py  cli.py  config.py  destinations.py  dispatch.py  filters.py  sse.py  storage.py  zmq_listener.py
tests/: conftest.py  test_config.py  test_destinations.py  test_dispatch.py  test_events.py  test_filters.py  test_publisher.py  test_server_api.py  test_server_cli.py  test_storage.py  test_zmq_listener.py
web/templates/: about.html  api.html  base.html  dashboard.html  destinations.html  devices.html  enroll.html  error.html  event.html  filters.html  sitemap.html
